--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root {
+  --primary: #ff4500;
+  --dark: #111;
+  --card-width: calc(1000 / 6 * 1px);
+  --card-height: calc(var(--card-width) * 1.5);
+}
+
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: #111;
-  color: #ff4500;
+  background-color: var(--dark);
+  color: var(--dark);
   text-align: center;
 }
 
@@ -19,7 +26,7 @@ p {
 
 .card-table {
   display: grid;
-  grid-template-columns: repeat(6, 120px);
-  grid-template-rows: repeat(2, 200px);
+  grid-template-columns: repeat(6, var(--card-width));
+  grid-template-rows: repeat(2, var(--card-height));
   justify-content: center;
 }
