--- a/style.css
+++ b/style.css
@@ -32,3 +32,21 @@ p {
   justify-content: center;
   grid-gap: 1rem;
 }
+
+.card {
+  position: relative;
+  transition: all 0.5s ease-in-out;
+}
+
+.back-image {
+  width: 50%;
+  height: auto;
+}
+
+.card .back {
+  display: absolute;
+  background-color: white;
+  width: 100%;
+  height: 100%;
+
+}
