--- a/style.css
+++ b/style.css
@@ -39,14 +39,17 @@ p {
 }
 
 .back-image {
-  width: 50%;
+  width: 50%;   /* to be changed to 90% later */
   height: auto;
 }
 
 .card .back {
-  display: absolute;
+  position: absolute;
   background-color: white;
   width: 100%;
   height: 100%;
-
+  border-radius: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
 }
