--- a/style.css
+++ b/style.css
@@ -45,11 +45,19 @@ p {
 
 .card .back {
   position: absolute;
-  background-color: white;
+  background-color: #f8f8e8;
   width: 100%;
   height: 100%;
   border-radius: 5%;
   display: flex;
   justify-content: center;
   align-items: center; 
+}
+
+.card .front {
+  position: absolute;
+  background: url('./images/bg.jpg') center no-repeat;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
 }
