image-overlay styling

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center; 
+  transition: all 1.5s ease-in-out
 }
 
 .card .front {
@@ -73,4 +74,15 @@ p {
 
 .lives-remaining {
   color: var(--primary);
+}
+
+.image-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color:  rgba(0, 0, 0 ,0.8);
+  opacity: 0;
+  transition: opacity 1s ease;
 }
